rm finals, organization, linkedlist